# zoo-1

./: .env.example  .gitattributes  .gitignore  DEPLOY.md  Makefile  README.md  alembic.ini  backup.sh  bot.py  config.py  constraints.txt  database.py  deploy.sh  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup-ssh.sh  zoo_bot.service
.claude/: settings.local.json
alembic/: env.py
backend/: pyproject.toml
backend/backend/: deps.py  main.py  security.py
backend/backend/routers/: admin.py  analytics.py  food.py  health.py  medical.py  payments.py  pets.py  privacy.py  reminders.py  services.py  subscriptions.py
backend/backend/services/: __init__.py  access.py  account.py  admin_stats.py  analytics.py  charts.py  clinics.py  content.py  norms.py  pdf_export.py  provider_health.py  scheduler.py  subscription.py  vision.py  voice.py  weather.py
backend/tests/: conftest.py  test_access.py  test_admin_stats.py  test_analytics.py  test_charts.py  test_clinics.py  test_content.py  test_health.py  test_norms.py  test_pdf_export.py  test_provider_health.py  test_security.py  test_subscription.py  test_subscription_db.py  test_vision.py  test_voice.py  test_weather_service.py
bot/: pyproject.toml
shared/: pyproject.toml
shared/tests/: test_config.py  test_models.py  test_schemas.py
shared/zoo_shared/: config.py  payments.py
shared/zoo_shared/db/: __init__.py  engine.py  models.py
shared/zoo_shared/schemas/: __init__.py  analytics.py  food.py  medical.py  payment.py  pet.py  reminder.py  subscription.py
(+124 files in other folders)
